# ai-powered-form-filling

./: .gitignore  README.md  api_info.json  pyproject.toml
backend/: .dockerignore  .env.example  .gitignore  BACKEND_README.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  openapi.json  pyproject.toml  start.sh
backend/ai_agents/: agent.py  serve.py
backend/ai_agents/form_fill_agents/: agent.py
backend/ai_agents/tools/: translator.py
backend/api/: main.py
backend/api/v1/: models.py
backend/api/v1/middleware/: __init__.py  rate_limiter.py
backend/api/v1/routers/: auth.py  entities.py  form_fill.py  templates.py  user_data.py
backend/data_processor/: README.md  __init__.py  extractor.py  mapper.py  postprocessor.py
backend/database/: README.md  __init__.py  base.py  init_db.py  repository.py  schema.py  session.py
backend/database/models/: __init__.py  entity.py  extracted_data.py  template.py  user.py
backend/scripts/: fix_template.py  migrate_consolidate_extracted_data.py  migrate_db.py  migrate_extracted_data_fix.py  pdf_extractor.py  reprocess_files.py  run_agent.sh  run_ocr_service.sh  run_server.sh  seed_test_data.py  start_dev.sh  stop_server.sh  verify_embeddings.py
backend/src/: __init__.py  docs_pdf_convertor.py  lang_detect.py
backend/src/api/: auth.py  entities.py  files.py  health.py
backend/src/core/: config.py  database.py  deps.py  security.py
backend/src/lang_detect/: language_detector.py
backend/src/models/: entity.py  file_upload.py  processing_job.py  session.py  user.py
backend/src/schemas/: common.py  entity.py  file.py  session.py  user.py
backend/src/services/: embedding_service.py  minio_service.py  pdf_extractor.py
backend/src/services/agent_service/: llm.py
backend/src/services/data_extraction/: extract_contents.py  pdf_extract.py  pdf_form_utils.py
backend/src/services/pdf_doc_service/: adobe_client.py  auto_fill.py  routes.py  (+3 more)
backend/src/tasks/: __init__.py  processing_tasks.py
backend/templates/: aadhaar_form.html
backend/tests/: test_lang_detect.py
backend/utils/: logger.py
(+32 files in other folders)
