[project]
name = "ai-powered-form-filling"
version = "0.1.0"
description = "AI-Powered Form Filling Backend with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "fasttext>=0.9.3",
    "numpy<2",
    "paddleocr>=3.2.0",
    "paddlepaddle>=2.5.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # Storage
    "minio>=7.2.0",
    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    # PDF Extraction
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",
    "pillow>=10.0.0",
    # Embeddings & Vector Storage
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    # Background Tasks
    "celery>=5.3.0",
    "redis>=5.0.0",
    "torch>=2.9.1",
]
