[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "numpy>=2.4.0",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "pillow>=12.0.0",
    "py-cpuinfo>=9.0.0",
    "pymupdf>=1.26.7",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.21",
]
